--- a/Sections/Categories.html
+++ b/Sections/Categories.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         <div class="top">
-            <a href="../Home page.html" class="titulo">Game Maverick</a>
+            <a href="../Home page.html" class="titulo"><img src="../Images/store logo.png" alt=""></a>
             <div class="fast_search">
                 <input type="submit" value="SEARCH">
                 <input class="text_input" type="text" placeholder="Search in store">
@@ -27,6 +27,7 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
+            <a href="">STORE MANAGEMENT</a>
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -62,7 +63,7 @@
                     <div class="categories_list">
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/cry of fear/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Horror
                                 </h3>
@@ -70,7 +71,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/gta san andreas/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Open world
                                 </h3>
@@ -78,7 +79,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/valheim/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Survival
                                 </h3>
@@ -86,7 +87,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/devil may cry/main image.avif" alt="icono de cuenta">
                                 <h3>
                                     Action
                                 </h3>
@@ -94,7 +95,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/burnout 2/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Race
                                 </h3>
@@ -102,7 +103,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/downhill domination/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Sports
                                 </h3>
@@ -110,7 +111,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/final fantasy 6/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Rpg
                                 </h3>
@@ -118,7 +119,7 @@
                         </div>
                         <div class="category_box">
                             <a href="">
-                                <img src="../Images/Default game icon.png" alt="icono de cuenta">
+                                <img src="../Images/images.png" alt="icono de cuenta">
                                 <h3>
                                     Others
                                 </h3>
