--- a/Sections/Search.html
+++ b/Sections/Search.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         <div class="top">
-            <a href="../Home page.html" class="titulo">Game Maverick</a>
+            <a href="../Home page.html" class="titulo"><img src="../Images/store logo.png" alt=""></a>
             <div class="fast_search">
                 <input type="submit" value="SEARCH">
                 <input class="text_input" type="text" placeholder="Search in store">
@@ -27,6 +27,7 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
+            <a href="">STORE MANAGEMENT</a>
         </div>
         <div class="mid">
             <div class="mid_left">
