--- a/Sections/Contact.html
+++ b/Sections/Contact.html
@@ -17,7 +17,7 @@
             </div>
             <div class="log_in_register">
                 <p>Hello guest! <br> 
-                use <a href="">LOG IN</a> or <a href="">REGISTER</a> to join the page</p>
+                    use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
                 <img src="../Images/Default user.png" alt="icono de cuenta">
             </div>
         </div>
