--- a/Home page.html
+++ b/Home page.html
@@ -112,7 +112,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Cry of fear.html">
                                 <img src="Images/cry of fear/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Cry of fear
