--- a/Sections/Categories.html
+++ b/Sections/Categories.html
@@ -62,7 +62,7 @@
                     <h2>CATEGORIES</h2>
                     <div class="categories_list">
                         <div class="category_box">
-                            <a href="">
+                            <a href="Horror category">
                                 <img src="../Images/cry of fear/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Horror
@@ -130,7 +130,6 @@
             </div>
         </div>
         <div class="bottom">
-            <h1>INFO</h1>
         </div>
     </div>
 </body>
