--- a/Sections/Categories.html
+++ b/Sections/Categories.html
@@ -35,7 +35,7 @@
                 <a href="../Sections/Categories.html">
                     All
                 </a>
-                <a href="">
+                <a href="Horror category.html">
                     Horror
                 </a>
                 <a href="">
@@ -62,7 +62,7 @@
                     <h2>CATEGORIES</h2>
                     <div class="categories_list">
                         <div class="category_box">
-                            <a href="Horror category">
+                            <a href="Horror category.html">
                                 <img src="../Images/cry of fear/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Horror
