--- a/Sections/Cry of fear.html
+++ b/Sections/Cry of fear.html
@@ -46,7 +46,7 @@
                 <a href="../Sections/Categories.html">
                     All
                 </a>
-                <a href="">
+                <a href="Horror category.html">
                     Horror
                 </a>
                 <a href="">
