--- a/Sections/Horror category.html
+++ b/Sections/Horror category.html
@@ -35,7 +35,7 @@
                 <a href="../Sections/Categories.html">
                     All
                 </a>
-                <a href="Horror category">
+                <a href="Horror category.html">
                     Horror
                 </a>
                 <a href="">
