--- a/Sections/Register.html
+++ b/Sections/Register.html
@@ -140,7 +140,7 @@
         <div class="mid_left">
           <h1>categories</h1>
           <a href="../Sections/Categories.html"> All </a>
-          <a href=""> Horror </a>
+          <a href="Horror category.html"> Horror </a>
           <a href=""> Open world </a>
           <a href=""> Survival </a>
           <a href=""> Action </a>
