--- a/Sections/Login.html
+++ b/Sections/Login.html
@@ -36,7 +36,7 @@
                 <a href="../Sections/Categories.html">
                     All
                 </a>
-                <a href="">
+                <a href="Horror category.html">
                     Horror
                 </a>
                 <a href="">
