--- a/Home page.html
+++ b/Home page.html
@@ -27,7 +27,6 @@
             <a href="Sections/Categories.html">CATEGORIES</a>
             <a href="Sections/About.html">ABOUT</a>
             <a href="Sections/Contact.html">CONTACT</a>
-            <a href="">STORE MANAGEMENT</a>
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -38,22 +37,22 @@
                 <a href="Sections/Horror category.html">
                     Horror
                 </a>
-                <a href="">
+                <a href="Sections/Open world category.html">
                     Open world
                 </a>
-                <a href="">
+                <a href="Sections/Survival category.html">
                     Survival
                 </a>
-                <a href="">
+                <a href="Sections/Action category.html">
                     Action
                 </a>
-                <a href="">
+                <a href="Sections/Race category.html">
                     Race
                 </a>
-                <a href="">
+                <a href="Sections/Sports category.html">
                     Sports
                 </a>
-                <a href="">
+                <a href="Sections/Rpg category.html">
                     Rpg
                 </a>
             </div>
@@ -64,7 +63,7 @@
                     <h2>Recent games</h2>
                     <div class="recent_games">
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Gta san andreas.html">
                                 <img src="Images/gta san andreas/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     GTA san andreas
@@ -72,7 +71,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Devil may cry.html">
                                 <img src="Images/devil may cry/main image.avif" alt="icono de cuenta">
                                 <h3>
                                     Devil may cry
@@ -80,7 +79,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Downhill domination.html">
                                 <img src="Images/downhill domination/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Downhill domination
@@ -88,7 +87,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Burnout 2.html">
                                 <img src="Images/burnout 2/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Burnout 2 point of impact
@@ -96,7 +95,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Valheim.html">
                                 <img src="Images/valheim/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Valheim
@@ -104,7 +103,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/FinalFantasy6.html">
                                 <img src="Images/final fantasy 6/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Final Fantasy 6
@@ -120,7 +119,7 @@
                             </a>
                         </div>
                         <div class="game_box">
-                            <a href="">
+                            <a href="Sections/Mega man 11.html">
                                 <img src="Images/mega man 11/main image.avif" alt="icono de cuenta">
                                 <h3>
                                     Mega man 11
