--- a/Sections/Categories.html
+++ b/Sections/Categories.html
@@ -27,7 +27,6 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
-            <a href="">STORE MANAGEMENT</a>
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -38,22 +37,22 @@
                 <a href="Horror category.html">
                     Horror
                 </a>
-                <a href="">
+                <a href="Open world category.html">
                     Open world
                 </a>
-                <a href="">
+                <a href="Survival category.html">
                     Survival
                 </a>
-                <a href="">
+                <a href="Action category.html">
                     Action
                 </a>
-                <a href="">
+                <a href="Race category.html">
                     Race
                 </a>
-                <a href="">
+                <a href="Sports category.html">
                     Sports
                 </a>
-                <a href="">
+                <a href="Rpg category.html">
                     Rpg
                 </a>
             </div>
@@ -70,7 +69,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Open world category.html">
                                 <img src="../Images/gta san andreas/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Open world
@@ -78,7 +77,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Survival category.html">
                                 <img src="../Images/valheim/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Survival
@@ -86,7 +85,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Action category.html">
                                 <img src="../Images/devil may cry/main image.avif" alt="icono de cuenta">
                                 <h3>
                                     Action
@@ -94,7 +93,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Race category.html">
                                 <img src="../Images/burnout 2/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Race
@@ -102,7 +101,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Sports category.html">
                                 <img src="../Images/downhill domination/main image.webp" alt="icono de cuenta">
                                 <h3>
                                     Sports
@@ -110,7 +109,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Rpg category.html">
                                 <img src="../Images/final fantasy 6/main image.jpg" alt="icono de cuenta">
                                 <h3>
                                     Rpg
@@ -118,7 +117,7 @@
                             </a>
                         </div>
                         <div class="category_box">
-                            <a href="">
+                            <a href="Others category.html">
                                 <img src="../Images/images.png" alt="icono de cuenta">
                                 <h3>
                                     Others
