--- a/Sections/FinalFantasy6.html
+++ b/Sections/FinalFantasy6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : Cry of fear</title>
+    <title>Game Maverick : Final fantasy 6</title>
     <link rel="stylesheet" href="../Styles/Style.css">
     <link rel="stylesheet" href="../Styles/Seccion_juego.css">
     <link
@@ -70,22 +70,22 @@
             <div class="mid_right">
                 <div class="seccion_juego">
                     <h1>
-                        Cry of fear
+                        Final fantasy 6
                     </h1>
                     <div class="carrusel">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../Images/cry of fear/sshot_1.jpg" class="d-block w-100" alt="screen shot 1">
+                                <img src="../Images/final fantasy 6/SShot1.jpg" class="d-block w-100" alt="screen shot 1">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_2.jpg" class="d-block w-100" alt="screen shot 2">
+                                <img src="../Images/final fantasy 6/SShot2.webp" class="d-block w-100" alt="screen shot 2">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_3.jpg" class="d-block w-100" alt="screen shot 3">
+                                <img src="../Images/final fantasy 6/SShot3.jpg" class="d-block w-100" alt="screen shot 3">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_4.jpg" class="d-block w-100" alt="screen shot 4">
+                                <img src="../Images/final fantasy 6/SShot4.avif" class="d-block w-100" alt="screen shot 4">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -104,16 +104,15 @@
                                 Description
                             </h2>
                             <p>
-                                Cry of Fear is a psychological single-player and co-op horror 
-                                game set in a deserted town filled with horrific creatures and 
-                                nightmarish delusions. You play as a young man desperately searching for answers 
-                                in the cold Scandinavian night, finding his way through the city as he slowly 
-                                descends into madness.
+                                The original FINAL FANTASY VI comes to life with completely 
+                                new graphics and audio! A remodeled 2D take on the sixth game 
+                                in the world-renowned FINAL FANTASY series! Enjoy the timeless 
+                                story told through charming retro graphics.
                             </p>
                         </div>
                         <div class="price">
                             <h3>$</h3>
-                            <h4>0</h4>
+                            <h4>9000</h4>
                         </div>
                     </div>
                     <button>agregar al carro</button>
