--- a/Sections/Mega man 11.html
+++ b/Sections/Mega man 11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : Cry of fear</title>
+    <title>Game Maverick : Mega man 11</title>
     <link rel="stylesheet" href="../Styles/Style.css">
     <link rel="stylesheet" href="../Styles/Seccion_juego.css">
     <link
@@ -38,6 +38,7 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
+
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -70,22 +71,22 @@
             <div class="mid_right">
                 <div class="seccion_juego">
                     <h1>
-                        Cry of fear
+                        Mega man 11
                     </h1>
                     <div class="carrusel">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../Images/cry of fear/sshot_1.jpg" class="d-block w-100" alt="screen shot 1">
+                                <img src="../Images/mega man 11/SShot1.jpg" class="d-block w-100" alt="screen shot 1">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_2.jpg" class="d-block w-100" alt="screen shot 2">
+                                <img src="../Images/mega man 11/SShot2.jpg" class="d-block w-100" alt="screen shot 2">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_3.jpg" class="d-block w-100" alt="screen shot 3">
+                                <img src="../Images/mega man 11/SShot3.png" class="d-block w-100" alt="screen shot 3">
                               </div>
                               <div class="carousel-item">
-                                <img src="../Images/cry of fear/sshot_4.jpg" class="d-block w-100" alt="screen shot 4">
+                                <img src="../Images/mega man 11/SShot4.jpg" class="d-block w-100" alt="screen shot 4">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -104,16 +105,15 @@
                                 Description
                             </h2>
                             <p>
-                                Cry of Fear is a psychological single-player and co-op horror 
-                                game set in a deserted town filled with horrific creatures and 
-                                nightmarish delusions. You play as a young man desperately searching for answers 
-                                in the cold Scandinavian night, finding his way through the city as he slowly 
-                                descends into madness.
+                                Mega Man is back! The newest entry in this iconic series blends classic, 
+                                challenging 2D platforming action with a fresh new visual style. 
+                                The new Double Gear system boosts Mega Man's speed and power for a 
+                                new twist to the satisfying gameplay the series is known for.
                             </p>
                         </div>
                         <div class="price">
                             <h3>$</h3>
-                            <h4>0</h4>
+                            <h4>24100</h4>
                         </div>
                     </div>
                     <button>agregar al carro</button>
