--- a/Sections/Register.html
+++ b/Sections/Register.html
@@ -134,19 +134,35 @@
         <a href="Categories.html">CATEGORIES</a>
         <a href="About.html">ABOUT</a>
         <a href="Contact.html">CONTACT</a>
-        <a href="">STORE MANAGEMENT</a>
+
       </div>
       <div class="mid">
         <div class="mid_left">
           <h1>categories</h1>
-          <a href="../Sections/Categories.html"> All </a>
-          <a href="Horror category.html"> Horror </a>
-          <a href=""> Open world </a>
-          <a href=""> Survival </a>
-          <a href=""> Action </a>
-          <a href=""> Race </a>
-          <a href=""> Sports </a>
-          <a href=""> Rpg </a>
+          <a href="../Sections/Categories.html">
+              All
+          </a>
+          <a href="Horror category.html">
+              Horror
+          </a>
+          <a href="Open world category.html">
+              Open world
+          </a>
+          <a href="Survival category.html">
+              Survival
+          </a>
+          <a href="Action category.html">
+              Action
+          </a>
+          <a href="Race category.html">
+              Race
+          </a>
+          <a href="Sports category.html">
+              Sports
+          </a>
+          <a href="Rpg category.html">
+              Rpg
+          </a>
         </div>
         <div class="mid_right">
           <div class="register">
