--- a/Sections/Action category.html
+++ b/Sections/Action category.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : LogIn</title>
+    <title>Game Maverick : Action</title>
     <link rel="stylesheet" href="../Styles/Style.css">
-    <link rel="stylesheet" href="../Styles/Login.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Styles/Category.css">
 </head>
 <body>
     <div class="content">
@@ -28,7 +27,6 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
-
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -59,19 +57,18 @@
                 </a>
             </div>
             <div class="mid_right">
-                <div class="login">
-                    <h1>
-                        LOG IN
-                    </h1>
-                    <div class="username">
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" id="username">
-                      </div>
-                      <div class="password">
-                        <input type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" id="password">
-                      </div>
-                      <div class="confirm_password">
-                        <input type="text" class="form-control" placeholder="Confirm password" aria-label="Confirm password" aria-describedby="basic-addon1" id="confirm_password">
-                      </div>
+                <div class="games">
+                    <h2>GAMES</h2>
+                    <div class="games_list">
+                        <div class="games_box">
+                            <a href="Devil may cry.html">
+                                <img src="../Images/devil may cry/main image.avif" alt="icono de cuenta">
+                                <h3>
+                                    Devil may cry
+                                </h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
