--- a/Sections/Horror category.html
+++ b/Sections/Horror category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : CATEGORIES</title>
+    <title>Game Maverick : Horror</title>
     <link rel="stylesheet" href="../Styles/Style.css">
     <link rel="stylesheet" href="../Styles/Category.css">
 </head>
@@ -27,7 +27,7 @@
             <a href="Categories.html">CATEGORIES</a>
             <a href="About.html">ABOUT</a>
             <a href="Contact.html">CONTACT</a>
-            <a href="">STORE MANAGEMENT</a>
+
         </div>
         <div class="mid">
             <div class="mid_left">
@@ -38,22 +38,22 @@
                 <a href="Horror category.html">
                     Horror
                 </a>
-                <a href="">
+                <a href="Open world category.html">
                     Open world
                 </a>
-                <a href="">
+                <a href="Survival category.html">
                     Survival
                 </a>
-                <a href="">
+                <a href="Action category.html">
                     Action
                 </a>
-                <a href="">
+                <a href="Race category.html">
                     Race
                 </a>
-                <a href="">
+                <a href="Sports category.html">
                     Sports
                 </a>
-                <a href="">
+                <a href="Rpg category.html">
                     Rpg
                 </a>
             </div>
